SEC540 Lab 3.3/dm-infrastructure-aws-main/assets/policy/opa-repo-constraint.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: dm-approved-repo
spec:
  enforcementAction: warn # [dryrun | warn | deny]
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces:
      - "dm"
  parameters:
    repos: # Note - policy uses "startsWith" to match items
      - 620125720130.dkr.ecr.ap-southeast-1.amazonaws.com/
      - registry.k8s.io/kube-controller-manager:v1
      - registry.k8s.io/kube-apiserver
